--- a/main.css
+++ b/main.css
@@ -89,6 +89,10 @@ hr{
     padding: 12px;
 }
 
+.artigo{
+    padding-left: 30px;
+}
+
 .sobre{
 display: block;
 margin: 0 auto;
@@ -103,11 +107,8 @@ footer{
 }
 
 @media screen and (max-width: 640px){
-    .card{
-    }
-
-    section{
-        padding-left: 55px;
+    .artigo{
+        padding-left: 60px;
     }
 
     .sobre img{
@@ -133,12 +134,12 @@ footer{
 }
 
 @media screen and (min-width: 641px) and (max-width: 1023px){
-    .container{
-        max-width: 100%;
+    .artigo{
+        padding-left: 40px;
     }
 
-    .sobre img{
-        padding-left: 10px;
+    .container{
+        max-width: 100%;
     }
 
     .sobre p{
